{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 36,
  "lineage": "64f21863-263c-c90b-74a3-a012b3029800",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067bff121a76fc5d7",
            "domain": "vpc",
            "id": "eipalloc-067bff121a76fc5d7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-235-193-182.compute-1.amazonaws.com",
            "public_ip": "34.235.193.182",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289212747056:internet-gateway/igw-0e7d451c90228f7dc",
            "id": "igw-0e7d451c90228f7dc",
            "owner_id": "289212747056",
            "tags": {
              "Environment": "fast-food",
              "Name": "fast-food-igw"
            },
            "tags_all": {
              "Environment": "fast-food",
              "Name": "fast-food-igw"
            },
            "vpc_id": "vpc-09841dcd166dc28e9"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067bff121a76fc5d7",
            "association_id": "eipassoc-001c762c956e88819",
            "connectivity_type": "public",
            "id": "nat-04e561874764e34a2",
            "network_interface_id": "eni-057bc5c61bd1e6a47",
            "private_ip": "10.0.1.12",
            "public_ip": "34.235.193.182",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e7cafa5a78b674de",
            "tags": {
              "Environment": "fast-food",
              "Name": "fast-food-NAT-GW"
            },
            "tags_all": {
              "Environment": "fast-food",
              "Name": "fast-food-NAT-GW"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-062efe06276a2bb9f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04e561874764e34a2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-062efe06276a2bb9f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e7d451c90228f7dc",
            "id": "r-rtb-0e5bfd604e3aaee011080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e5bfd604e3aaee01",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289212747056:route-table/rtb-062efe06276a2bb9f",
            "id": "rtb-062efe06276a2bb9f",
            "owner_id": "289212747056",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "fast-food",
              "Name": "fast-food-private-route-table"
            },
            "tags_all": {
              "Environment": "fast-food",
              "Name": "fast-food-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09841dcd166dc28e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289212747056:route-table/rtb-0e5bfd604e3aaee01",
            "id": "rtb-0e5bfd604e3aaee01",
            "owner_id": "289212747056",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "fast-food",
              "Name": "fast-food-public-route-table"
            },
            "tags_all": {
              "Environment": "fast-food",
              "Name": "fast-food-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09841dcd166dc28e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eed43527b118c638",
            "route_table_id": "rtb-062efe06276a2bb9f",
            "subnet_id": "subnet-0d2edc50e2ce32f06"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1cacf8851d2f5fc",
            "route_table_id": "rtb-062efe06276a2bb9f",
            "subnet_id": "subnet-0c6003053c4684e33"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023dc93e72690a89c",
            "route_table_id": "rtb-0e5bfd604e3aaee01",
            "subnet_id": "subnet-0e7cafa5a78b674de"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037e3cacd1df66ff1",
            "route_table_id": "rtb-0e5bfd604e3aaee01",
            "subnet_id": "subnet-0f04acbd7fdcec90b"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289212747056:security-group/sg-045f1207e2919dd87",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-045f1207e2919dd87",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "fast-food-default-sg",
            "name_prefix": "",
            "owner_id": "289212747056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "fast-food"
            },
            "tags_all": {
              "Environment": "fast-food"
            },
            "timeouts": null,
            "vpc_id": "vpc-09841dcd166dc28e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289212747056:subnet/subnet-0d2edc50e2ce32f06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2edc50e2ce32f06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "289212747056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "fast-food",
              "Name": "fast-food-us-east-1a-private-subnet"
            },
            "tags_all": {
              "Environment": "fast-food",
              "Name": "fast-food-us-east-1a-private-subnet"
            },
            "vpc_id": "vpc-09841dcd166dc28e9"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289212747056:subnet/subnet-0c6003053c4684e33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6003053c4684e33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "289212747056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "fast-food",
              "Name": "fast-food-us-east-1b-private-subnet"
            },
            "tags_all": {
              "Environment": "fast-food",
              "Name": "fast-food-us-east-1b-private-subnet"
            },
            "vpc_id": "vpc-09841dcd166dc28e9"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289212747056:subnet/subnet-0e7cafa5a78b674de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7cafa5a78b674de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "289212747056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "fast-food",
              "Name": "fast-food-us-east-1a-public-subnet"
            },
            "tags_all": {
              "Environment": "fast-food",
              "Name": "fast-food-us-east-1a-public-subnet"
            },
            "vpc_id": "vpc-09841dcd166dc28e9"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289212747056:subnet/subnet-0f04acbd7fdcec90b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f04acbd7fdcec90b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "289212747056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "fast-food",
              "Name": "fast-food-us-east-1b-public-subnet"
            },
            "tags_all": {
              "Environment": "fast-food",
              "Name": "fast-food-us-east-1b-public-subnet"
            },
            "vpc_id": "vpc-09841dcd166dc28e9"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289212747056:vpc/vpc-09841dcd166dc28e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-012a416f069084882",
            "default_route_table_id": "rtb-0f64a6d51b40fe955",
            "default_security_group_id": "sg-0b07064f4cdbca56e",
            "dhcp_options_id": "dopt-070ae3cf448ee9482",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09841dcd166dc28e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f64a6d51b40fe955",
            "owner_id": "289212747056",
            "tags": {
              "Environment": "fast-food",
              "Name": "fast-food-vpc"
            },
            "tags_all": {
              "Environment": "fast-food",
              "Name": "fast-food-vpc"
            }
          }
        }
      ]
    }
  ]
}